fix(youtube): contrast issues

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name YouTube Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/youtube
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/youtube
-@version 3.0.10
+@version 3.0.11
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/youtube/catppuccin.user.css
 @description Soothing pastel theme for YouTube
 @author Catppuccin
@@ -150,7 +150,7 @@
       --yt-spec-text-primary-inverse: @crust !important;
       --yt-spec-call-to-action: @accent-Color !important;
       --yt-spec-call-to-action-inverse: @accent-Color !important;
-      --yt-spec-suggested-action: @surface1 !important;
+      --yt-spec-suggested-action: fadeout(@accent-Color, 80%) !important;
       --yt-spec-suggested-action-inverse: @text !important;
       --yt-spec-icon-active-other: @overlay0 !important;
       --yt-spec-icon-inactive: @overlay1 !important;
@@ -219,10 +219,10 @@
       --yt-spec-general-background-b: @mantle !important;
       --yt-spec-general-background-c: @crust !important;
       --yt-spec-error-background: @base !important;
-      --yt-spec-10-percent-layer: @surface0 !important;
+      --yt-spec-10-percent-layer: @surface2 !important;
       --yt-spec-snackbar-background: @mantle !important;
       --yt-spec-snackbar-background-updated: @mantle !important;
-      --yt-spec-badge-chip-background: @surface0 !important;
+      --yt-spec-badge-chip-background: if(@lookup = latte, @crust, @surface1) !important;
       --yt-spec-verified-badge-background: @overlay0 !important;
       --yt-spec-call-to-action-fadeoutd: fadeout(@sapphire, 0.3) !important;
       --yt-spec-call-to-action-hover: @accent-Color !importantr;
